[package]
name = "app"
version = "1.2.0"
description = "A Bilibili Cross-Platform Desktop Client Powered By Tauri"
authors = ["endcloud <endcloud@qq.com>"]
license = "GPL-3.0"
repository = "https://github.com/endcloud/bbhouse-tauri"
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["clipboard-all", "dialog-all", "fs-all", "http-all", "os-all", "path-all", "shell-execute", "shell-open", "shell-sidecar", "window-all"] }
tokio = { version = "1.20.1", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] }
hyper-rustls = "0.23.0"
anyhow = "1.0.68"
futures-util = "0.3.21"
libloading = "0.7.3"
actix-web = "4.1.0"
actix-rt = "2.7.0"
reqwest = { version = "0.11.4", features = ["blocking","json"] }
scraper = "0.16.0"
flate2 = "1.0.24"
futures = "0.3.23"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
